Adjust the styling even more since previous issue caused wrong alignment

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -33,7 +33,7 @@
   left: 0;
   right: 0;
   content: '';
-  height: 50vh;
+  height: 55vh;
   position: absolute;
 }
 
